# ExcelProcessor

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  extract_payslip.py  generate_csv.py  generate_report.py  import_transactions.py  justfile  main.py  pyproject.toml  pyrightconfig.json  run.sh
deprecated/: console.py  generate_csv.py  import_transactions.py
explore/: explore_accounts.py
scripts/: explore_accounts.py  explore_categories.py  list_accounts.py  list_categories.py  list_payees.py  list_tags.py  zero_out_balances.py
src/: api.py  main.py
src/core/: categories.py  categories.yaml  excel.py  pdf.py
src/io/: actual.py  console.py  filesystem.py
src/models/: actual.py  pdf.py
tests/: generate_mock_excel.py  mock_data.py  test_categories.py  test_excel.py  test_io_integration.py  test_pdf.py
ui/: STYLE.md  app.js  index.html  style.css
